# PeppeSplines

./: CMakeLists.txt
Input and tests/: 1.out  1.txt  2.out  2.txt  input.txt
Python Scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Python files/: Spline_2.py
jupiter files/: Spline_2.ipynb
jupiter files/.ipynb_checkpoints/: Spline_2-checkpoint.ipynb
src/: intersection.cpp  intersection.h  main.cpp  newton.cpp  newton.h  parser.cpp  parser.h  splines.cpp  splines.h  writer.cpp  writer.h
